# Weather_Station_ESP-IDF2

./: .gitignore  CMakeLists.txt  README.md  partitions.csv  sdkconfig.defaults
Main backup/: APDS9930.cpp  APDS9930.h  CMakeLists.txt  ds3231.h  home_assistant.c  image_template.c  main.cpp  secrets.h  waveshare_rgb_lcd_port.h  weather_client.h  wifi_manager.h
Main backup/UI/: images.h  screens.h  vars.h
Main backup/UI/images/: ui_image_icon_02n_72p.c  ui_image_icon_10d_72p.c
main/: CMakeLists.txt  ds3231.c  ds3231.h  home_assistant.c  home_assistant.h  idf_component.yml  main.c  presence_sensor.c  presence_sensor.h  secrets.h  secrets_template.h  ui_actions.c  ui_actions.cpp  waveshare_rgb_lcd_port.c  waveshare_rgb_lcd_port.h  weather_client.c  weather_client.h  wifi_manager.c  wifi_manager.h
main/UI/: actions.h  eez-flow.h  images.c  screens.c  screens.h  ui.c  ui.h
main/UI/images/: ui_image_icon_13d_13n_72p.c  ui_image_icon_50d_50n_72p.c
